--- a/package.json
+++ b/package.json
@@ -10,9 +10,17 @@
     "@types/node": "^16.18.114",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
+    "@types/styled-components": "^5.1.34",
+    "axios": "^1.7.7",
+    "bootstrap": "^5.3.3",
+    "gsap": "^3.12.5",
+    "node-telegram-bot-api": "^0.66.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-helmet": "^6.1.0",
+    "react-icons": "^5.3.0",
     "react-scripts": "5.0.1",
+    "styled-components": "^6.1.13",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
@@ -39,5 +47,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/gsap": "^1.20.2",
+    "babel-plugin-transform-inline-environment-variables": "^0.4.4"
   }
 }
